--- a/restful-service/pom.xml
+++ b/restful-service/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.2.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>database.design</groupId>
-	<artifactId>final-project</artifactId>
+	<groupId>demo</groupId>
+	<artifactId>restful-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>final-project</name>
-	<description>Final Project for CSCI 340 - Database Design</description>
+	<name>restful-service</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>22</java.version>
 	</properties>
